--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ rootProject.name = "fabric-api"
 
 include 'fabric-api-base'
 
+include 'fabric-api-lookup-api-v1'
 include 'fabric-biome-api-v1'
 include 'fabric-blockrenderlayer-v1'
 include 'fabric-commands-v0'
@@ -38,7 +39,6 @@ include 'fabric-networking-blockentity-v0'
 include 'fabric-object-builder-api-v1'
 include 'fabric-object-builders-v0'
 include 'fabric-particles-v1'
-include 'fabric-provider-api-v1'
 include 'fabric-registry-sync-v0'
 include 'fabric-renderer-api-v1'
 include 'fabric-renderer-indigo'
