Update to account for nullability and do caching.

--- a/fabric-registry-sync-v0/build.gradle
+++ b/fabric-registry-sync-v0/build.gradle
@@ -3,5 +3,6 @@ version = getSubprojectVersion(project, "0.7.3")
 
 moduleDependencies(project, [
 		'fabric-api-base',
-		'fabric-networking-api-v1'
+		'fabric-networking-api-v1',
+		'fabric-lifecycle-events-v1'
 ])
