--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -5,4 +5,4 @@ contact_links:
     about: Please ask here for help with installing Fabric
   - name: Github Discussions
     url: https://github.com/FabricMC/fabric/discussions
-    about: Please look here for frequently asked questions and questions on how to use Fabric Api.
+    about: Please look here for frequently asked questions and questions on how to use Fabric API.
