--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,6 +3,6 @@ contact_links:
   - name: FabricMC Discord
     url: https://discord.gg/v6v4pMv
     about: Please ask here for help with installing Fabric.
-  - name: Github Discussions
+  - name: GitHub Discussions
     url: https://github.com/FabricMC/fabric/discussions
     about: Please look here for frequently asked questions and questions on how to use Fabric API.
